--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div class="container">
     <h2>👩‍💻 Test Your Speed 👨‍💻</h2>
-    <small>Type the following:</small><br><br>
+    <small>Are You Ready To Start:</small><br><br>
     <button class="play1">
       <a href="play.html"><i class="fa fa-play"></a></i>
     </button>
